working on base class architecture for editor extension, binding to asset import or map save, example connecting to api and using that data in project from json file

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -72,6 +72,7 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/PythonScriptPlugin.PythonScriptPluginSettings]
++AdditionalPaths=(Path="/Game/Plugins/test_python_plugin/Content/Python")
 bIsolateInterpreterEnvironment=True
 bDeveloperMode=False
 bRemoteExecution=False
